<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20dp"
        android:text="@string/topup_enter_number_text1" />
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:layout_marginTop="10dp"
	    android:text="@string/topup_enter_number_text2" />
	
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="20dp"
	    android:text="@string/topup_enter_number_text3" />
	<EditText
	    android:id="@+id/edit_number"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:phoneNumber="true" />
	
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:layout_marginLeft="20dp"
	    android:text="@string/topup_enter_number_text4" />
	<EditText
	    android:id="@+id/edit_amount"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:inputType="numberDecimal" />
	
	<Button
	    android:id="@+id/button_ok"
	    android:layout_width="200dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:layout_marginTop="100dp"
	    android:background="#0ee861"
        android:textColor="#ffffff"
	    android:text="@string/topup_enter_number_text5" />
</LinearLayout>
