<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
	    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/mobiwire_logo" />
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:orientation="vertical" >
	        
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:text="@string/send_money_preview_text1" />
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:text="@string/send_money_preview_text2" />
	    </LinearLayout>
	</LinearLayout>
	
	<TextView
	    android:id="@+id/text_amount"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" />
	
	<TextView
	    android:id="@+id/text_trans"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" />
	
	<TextView
	    android:id="@+id/text_declare"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" />
	
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/send_money_preview_text3" />
	
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/send_money_preview_text4" />
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/send_money_preview_text5" />
	
	<ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/bus_ticket_qr" />
	
	<Button
        android:id="@+id/button_print"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:background="#b8c3f2"
        android:textColor="#ffffff"
        android:text="@string/send_money_preview_text6" />
</LinearLayout>
