<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:textSize="30dp"
        android:text="@string/topup_payment_choose_text1" />
    
    <TextView
        android:id="@+id/text_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="30dp" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >
    <TextView
        android:id="@+id/text_payment_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/topup_payment_choose_text2" />
	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topup_payment_choose_text3" />
	</LinearLayout>
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:layout_marginTop="50dp"
	    android:orientation="horizontal" >
	    
	    <Button
	        android:id="@+id/button_cash"
	        android:layout_width="130dp"
	        android:layout_height="wrap_content"
	        android:textSize="18dp"
	        android:text="@string/topup_payment_choose_text4" />
	    <Button
	        android:id="@+id/button_mobibank"
	        android:layout_width="130dp"
	        android:layout_height="wrap_content"
	        android:textSize="18dp"
	        android:text="@string/topup_payment_choose_text5" />
	</LinearLayout>
</LinearLayout>
