<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="26dp" />
    

	<EditText
	    android:id="@+id/edit_item_name"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="50dp"
	    android:textSize="16dp"
	    android:hint="@string/settings_idtm_detail_text1"
	    android:maxLength="15"
	    android:layout_gravity="center_horizontal" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:orientation="horizontal" >
	    <EditText
	        android:id="@+id/edit_item_barcode"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="5"
	        android:textSize="16dp"
		    android:hint="@string/settings_idtm_detail_text2"
	        android:layout_gravity="center_vertical"
	        android:maxLength="16"
	        android:inputType="numberSigned" />
	    
	   	<Button
	        android:id="@+id/button_scan"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:layout_gravity="center_horizontal"
		    android:background="#68aae3"
	       	android:textColor="#ffffff"
	       	android:textSize="16dp"
		    android:text="@string/settings_idtm_detail_text3" />
	</LinearLayout>
    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16dp"
	    android:hint="@string/settings_idtm_detail_text4"
	    android:layout_gravity="center_horizontal"
	    android:maxLength="8"
        android:inputType="numberDecimal" />
	    
    <EditText
        android:id="@+id/edit_qtty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16dp"
	    android:hint="@string/settings_idtm_detail_text5"
	    android:layout_gravity="center_horizontal"
	    android:maxLength="6"
        android:inputType="numberSigned" />
	        
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="#ff0000"
        	android:textColor="#ffffff"
            android:text="@string/settings_idtm_detail_text6" />
	    <Button
	        android:id="@+id/button_ok"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:background="#0ee861"
        	android:textColor="#ffffff"
	        android:text="@string/settings_idtm_detail_text7" />
	</LinearLayout>
</LinearLayout>
