<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mobiwire_logo" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:textSize="22dp"
            android:text="@string/settings_item_data_text1" />
    </LinearLayout>
    
	
	<LinearLayout 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" > 
   
        <TextView 
            android:layout_width="0dp" 
            android:layout_height="wrap_content" 
            android:layout_weight="4"
            android:text="@string/settings_item_data_text2" />
   
        <TextView 
            android:layout_width="0dp" 
            android:layout_height="wrap_content" 
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/settings_item_data_text3" />
   
        <TextView 
            android:id="@+id/addr" 
            android:layout_width="0dp" 
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:gravity="center"
            android:text="@string/settings_item_data_text4" />
    </LinearLayout> 
    
	<ListView 
        android:id="@+id/lv" 
        android:layout_width="fill_parent" 
        android:layout_height="260dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" > 
    </ListView> 
    
	<Button
	    android:id="@+id/button_add"
	    android:layout_width="150dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:layout_marginTop="20dp"
	    android:background="#68aae3"
       	android:textColor="#ffffff"
	    android:text="@string/settings_item_data_text5" />
</LinearLayout>
